--- a/senna-blogs/package.json
+++ b/senna-blogs/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "hoist-non-react-statics": "^3.3.2",
+    "luxon": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
